# si-symplectic-agent

./: AGENT.md  Cargo.toml  README.md
src/: agent_experiment.rs  conservation.rs  hamiltonian.rs  integrator.rs  lib.rs  phase.rs  tests.rs
