[package]
name = "si-symplectic-agent"
version = "0.1.0"
edition = "2021"
description = "Proof of concept: agent trajectories as Hamiltonian flows — Cyberloop's Riemannian control formalized with symplectic integration"
license = "MIT"
repository = "https://github.com/SuperInstance/si-symplectic-agent"
keywords = ["symplectic", "hamiltonian", "agent", "cyberloop", "physics"]
categories = ["science", "mathematics", "simulation"]

[dependencies]
